--- a/src/html/index.html
+++ b/src/html/index.html
@@ -1,14 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <title>Object Explorer</title>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">    
-    <title>Document</title>
     <style>
-        p{
+        body {            
+            margin: 0%;
+        }
+        canvas {
+            display: block; /* fix necessary to remove space at bottom of canvas */            
+        }
+        p {
             color:rgb(0, 255, 213);
             font-family: monospace;
+        }
+
+        a {
+            color:rgb(32, 35, 35);
+            font-family: monospace;
+            font-size:24px
         }
 
         #blocker {
@@ -31,12 +43,21 @@
             font-size: 14px;
             cursor: pointer;
         }
-    </style>
-
+    </style>    
 </head>
 <body>
-    <div id="blocker">
+    <div id="blocker">        
         <div id="instructions">
+            <nav>
+                <a href="#">[Explorer]</a>
+                <a href="/src/html/navigationPages/about.html">[About]</a>
+                <a href="/src/html/navigationPages/coreIdeas.html">[Core Ideas]</a>
+                <a href="/src/html/navigationPages/applications.html">[Applications]</a>
+                <a href="/src/html/navigationPages/businessModel.html">[Business Model]</a>                
+                <a href="/src/html/navigationPages/ethics.html">[Ethics]</a>
+                <a href="/src/html/navigationPages/challenges.html">[Challenges]</a>
+                <a href="/src/html/navigationPages/links.html">[ Links]</a>
+            </nav>
             <p style="font-size:36px">
                 Click to play
             </p>
@@ -47,7 +68,6 @@
             </p>
         </div>
     </div>
-
     
 </body>
 </html>
