--- a/src/html/index.html
+++ b/src/html/index.html
@@ -24,7 +24,8 @@
           <!-- Generate the grid using JavaScript -->
         </div>
     </div>
-      
+    
+    <!-- To do: make all these pages load the text dynamically from database -->
     <div id="blocker">        
         <div id="instructions">
             <nav *>
